--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,370 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+.layout {
+  font-family: var(--font-family);
+  background-color: var(--background-color);
+ 
+}
 
-.page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+.frame-decor::before {
+  align-self: flex-start;
+  justify-self: end;
+  position: absolute;
+  content: "";
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-start: 1px solid var(--decoration-color);
+  border-inline-end: 1px solid var(--decoration-color);
+}
+
+.frame-decor::after {
+  justify-self: start;
+  align-self: flex-end;
+  position: absolute;
+  content: "";
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-end: 1px solid var(--decoration-color);
+  border-inline-start: 1px solid var(--decoration-color);
+}
+
+.inline-link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.inline-link:focus-visible {
+  outline: none;
+}
+
+/* HEADER*/
+
+.site-header {
+  height: 100vh;
+  padding: 10px;
+  background-image: var(--background-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: column;
+  align-items: center;
+}
+
+.site-header__status-indicator {
+  align-self: flex-start;
+  justify-self: end;
+  position: absolute;
+  visibility: var(--is-light);
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  block-size: 25px;
+  justify-self: end;
+  color: var(--accent-color);
+  font-size: var(--regular-font-size);
+  text-transform: uppercase;
+  line-height: 25px;
+}
+
+.site-header__status-indicator::after {
+  align-self: center;
+  content: "";
+  inline-size: 9px;
+  block-size: 9px;
+  margin-inline-end: 9px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: drop-shadow(0px 0px 4px var(--accent-color));
+}
+
+.theme-switcher {
+  grid-column: 1 / 3;
+  justify-self: end;
+}
+
+.theme-switcher__list {
+  display: grid;
+  gap: 10px;
+}
+
+.theme-switcher__button {
+  padding: 4px 13px;
+  background-color: inherit;
+  border: none;
+  font-size: var(--regular-font-size);
+  line-height: var(--regular-line-height);
+  text-transform: lowercase;
+  color: var(--decoration-color);
+  cursor: pointer;
+}
+
+.theme-switcher__button_active {
+  pointer-events: none;
+  border: 1px solid var(--decoration-color);
+}
+
+.site-header__title {
+  grid-column: 1 / 3;
+  justify-self: start;
+  color: var(--header1-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: 116px;
+  line-height: var(--small-line-height);
+}
+
+.site-header__subtitle {
+  grid-column: 1 / 3;
+  justify-content: end;
+  display: inline-block;
+}
+
+/* MAIN */
+
+.content {
+  margin-block: 40px;
+  padding-inline: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  row-gap: 50px;
+}
+
+.section-block {
+  grid-column: 1 / 4;
+  grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+  gap: 20px;
+}
+
+.section-block__title {
+  grid-column: 1 / 4;
+  color: var(--header2-color);
+  font-size: var(--regular-font-size);
+  font-weight: var(--bold-font-weight);
+  line-height: var(--large-line-height);
+}
+
+.section-block__card {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-rows: min-content auto;
+  grid-auto-flow: row;
+  row-gap: 10px;
+}
+
+.highlight-title {
+  grid-column: 1 / 4;
+  color: var(--header3-color);
+  background-color: var(--accent-color);
+  font-size: var(--regular-font-size);
+  font-weight: var(--bold-font-weight);
+  line-height: var(--large-line-height);
+}
+
+.section-block__text {
+  grid-column: 1 / 4;
+  color: var(--text-color);
+  font-size: var(--regular-font-size);
+  line-height: var(--large-line-height);
+}
+
+.gallery-section {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  gap: 10px;
+}
+
+.gallery-section__image {
+  grid-column: 1 / 4;
+  width: 100%;
+  height: 100%;
+}
+
+.highlight-title_thin {
+  font-weight: var(--regular-font-weight);
+}
+
+/* FOOTER */
+
+.site-footer {
+  padding: 10px;
+  block-size: 100vh;
+  display: grid;
+}
+
+.site-footer__title {
+  justify-self: center;
+  align-self: center;
+  color: var(--header1-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+  font-size: 116px;
+  line-height: var(--title-line-height);
+}
+
+@media (width >= 768px) {
+  .site-header {
+    padding: 20px;
+  }
+
+  .site-header__title {
+    position: relative;
+    margin-inline-start: -20px;
+    font-size: 157px;
+    width: 759px;
+    height: 130px;
+  }
+
+  .site-header__subtitle {
+    grid-column: 2 / 3;
+    width: 491px;
+    height: 71px;
+    position: absolute;
+    top: 563px;
+    left: 513px;
+  }
+
+  .content {
+    margin-block: 60px;
+    padding-inline: 20px;
+    row-gap: 80px;
+  }
+
+  .section-block {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section-block__title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+
+  .section-block__card {
+    grid-column: 2 / 3;
+  }
+
+  .section-block:nth-child(2) .section-block__card{
+    grid-column: 1 / 4;
+  }
+
+  .section-block > .highlight-title{
+    grid-column: 2 / 3;
+  }
+
+  .gallery-section {
+    gap: 20px;
+  }
+
+  .gallery-section__image {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .gallery-section__image:nth-child(2) {
+    grid-column: 1 / 3;
+  }
+
+  .gallery-section__image:nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+
+  .gallery-section__image:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+  }
+
+  .gallery-section__image:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .gallery-section__image:nth-child(6) {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .site-footer {
+    padding: 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  .inline-link:hover {
+    border-bottom: 1px solid var(--text-color);
+  }
+
+  .inline-link:focus {
+    outline: none;
+  }
+
+  .inline-link:focus-visible {
+    outline: 1px solid var(--text-color);
+    outline-offset: -1px;
+  }
+
+  .theme-switcher {
+    align-self: start;
+    justify-self: center;
+    width:230px;
+    height: 26px;
+  }
+
+  .theme-switcher__list {
+    grid-auto-flow: column;
+    width:230px;
+    height: 26px;
+  }
+
+  .theme-switcher__button:hover:not(.theme-switcher__button_active) {
+    border: 1px solid var(--accent-color-opacity);
+  }
+
+  .theme-switcher__button:focus {
+    outline: none;
+  }
+
+  .theme-switcher__button:focus-visible {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--decoration-color);
+  }
+
+  .site-header__title {
+    font-size: 157px;
+    width: 759px;
+    height: 130px;
+  }
+
+  .section-block {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section-block__card {
+    grid-column: 2 / 4;
+  }
+
+  .section-block:nth-child(2) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
+
+  .section-block:nth-child(2) .section-block__title {
+    grid-row: span 1;
+  }
+
+  .section-block:nth-child(2) .section-block__card{
+    grid-row: 2 / 3 ;
+    grid-column: span 1;
+  }
+
+  .section-block > .highlight-title{
+    grid-column: 2 / 4;
+  }
+
+  .site-footer__title {
+    font-size: 157px;
+  }
 }
