--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,42 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image: url("../images/cover-image-light.png");
+  --accent-color: #ff8dcb;
+  --accent-color-opacity: #32312d66;
+  --text-color: #353430;
+  --decoration-color: var(--text-color);
+  --background-color: #fff1f7;
+  --header1-color: #ffc2e6;
+  --header2-color: var(--text-color);
+  --header3-color: var(--text-color);
+  --is-light: hidden;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .layout {
+  --background-image: url("../images/cover-image-light.png");
+  --accent-color: #ff8dcb;
+  --accent-color-opacity: #32312d66;
+  --text-color: #353430;
+  --decoration-color: var(--text-color);
+  --background-color: #fff1f7;
+  --header1-color: #ffc2e6;
+  --header2-color: var(--text-color);
+  --header3-color: var(--text-color);
+  --is-light: hidden;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-image: url("../images/cover-image-light.png");
+    --accent-color: #ff8dcb;
+    --accent-color-opacity: #32312d66;
+    --text-color: #353430;
+    --decoration-color: var(--text-color);
+    --background-color: #fff1f7;
+    --header1-color: #ffc2e6;
+    --header2-color: var(--text-color);
+    --header3-color: var(--text-color);
+    --is-light: hidden;
+  }
 }
