--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,8 +1,13 @@
+/*
+  Специально для тёмной темы при наличии класса,
+  здесь окажутся стили, которые нужно переопределить принудительно,
+  переключая тему
+*/
 
 
-:root.theme-dark {
-  --background-image: url("/images/cover-image-dark.png");
-  --accent-color: #ff0070;
+.page.theme_dark {
+  --background-image: url("../images/cover-image-dark.png");
+  --accent-color: #FF0070;
   --accent-color-opacity: #ff007066;
   --text-color: #f1b2ce;
   --decoration-color: var(--accent-color);
@@ -11,18 +16,10 @@
   --header2-color: var(--accent-color);
   --header3-color: var(--background-color);
   --is-light: visible;
-}
+  
 
-.theme-dark .layout {
-
-  --background-image: url("/images/cover-image-dark.png");
-  --accent-color: #ff0070;
-  --accent-color-opacity: #ff007066;
-  --text-color: #f1b2ce;
-  --decoration-color: var(--accent-color);
-  --background-color: #000028;
-  --header1-color: #db00ff;
-  --header2-color: var(--accent-color);
-  --header3-color: var(--background-color);
-  --is-light: visible;
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
 }
