--- a/styles/style.css
+++ b/styles/style.css
@@ -1,370 +1,317 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.shadow-decor {
+  text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
 }
 
+/* #endregion Конец вспомогательных классов  */
+
+/* #region Начало глобальных компонентов */
+
 .page {
-  font-family: var(--font-family);
-  background-color: var(--background-color);
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  color: var(--text-color, #f1b2ce);
+  font-family: var(--page-font-family, "IBM Plex mono", monospace);
+  font-size: 18px;
+  line-height: 23.4px;
+  background-color: var(--page-background-color, #000028);
+  background-image: var(
+    --page-background-image,
+    url("../images/cover-image.png")
+  );
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.cover {
+  display: grid;
+  padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  min-block-size: 100vh;
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inline-size: 25px;
+  block-size: 25px;
 }
 
 .decorated-zone::before {
-  align-self: flex-start;
-  justify-self: end;
-  position: absolute;
-  content: "";
-  inline-size: 25px;
-  block-size: 25px;
-  border-block-start: 1px solid var(--decoration-color);
-  border-inline-end: 1px solid var(--decoration-color);
+  border-inline-end: 1px solid var(--secondary-color, #ff0070);
+  border-block-start: 1px solid var(--secondary-color, #ff0070);
+  inset-inline-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
 }
 
 .decorated-zone::after {
-  justify-self: start;
-  align-self: flex-end;
-  position: absolute;
-  content: "";
-  inline-size: 25px;
-  block-size: 25px;
-  border-block-end: 1px solid var(--decoration-color);
-  border-inline-start: 1px solid var(--decoration-color);
+  border-inline-start: 1px solid var(--secondary-color, #ff0070);
+  border-block-end: 1px solid var(--secondary-color, #ff0070);
+  inset-inline-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
 }
 
-.text-link {
+.link {
   text-decoration: none;
-  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.text-link:focus-visible {
-  outline: none;
+.link:hover {
+  text-decoration: underline;
 }
 
-/* HEADER STYLES */
-
-.header {
-  min-height: 100vh;
-  padding: 10px;
-  background-image: var(--background-image);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-flow: column;
-  align-items: center;
+.link:focus {
+  outline: 0;
 }
 
-.header__decoration-dark {
-  align-self: flex-start;
-  justify-self: end;
+.link:focus-visible {
+  outline: 1px solid currentColor;
+}
+
+.rec-decor {
   position: absolute;
-  visibility: var(--is-light);
-  display: grid;
-  grid-template-columns: repeat(2, auto);
+  z-index: -1;
+  visibility: var(--rec-decor-visibility, visible);
+  display: inline-flex;
+  align-items: center;
   gap: 10px;
-  block-size: 25px;
-  justify-self: end;
-  color: var(--accent-color);
-  font-size: var(--regular-font-size);
-  text-transform: uppercase;
-  line-height: 25px;
+  inset-inline-end: 20px;
+  inset-block-start: 10px;
 }
 
-.header__decoration-dark::after {
-  align-self: center;
+.rec-decor::before {
+  content: "REC";
+  color: var(--accent-color, #ff0070);
+  line-height: 24px;
+}
+
+.rec-decor::after {
   content: "";
+  display: inline-block;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 2px var(--accent-color, #ff0070);
+  background: var(--accent-color, #ff0070);
   inline-size: 9px;
   block-size: 9px;
-  margin-inline-end: 9px;
-  background-color: var(--accent-color);
-  border-radius: 50%;
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
 }
 
-.header__theme-menu {
-  grid-column: 1 / 3;
-  justify-self: end;
-}
-
-.header__theme-menu-list {
-  display: grid;
-  gap: 10px;
-}
-
-.header__theme-menu-button {
-  padding: 4px 13px;
-  background-color: inherit;
-  border: none;
-  font-size: var(--regular-font-size);
-  line-height: var(--regular-line-height);
-  text-transform: lowercase;
-  color: var(--decoration-color);
-  cursor: pointer;
-}
-
-.header__theme-menu-button_active {
-  pointer-events: none;
-  border: 1px solid var(--decoration-color);
-}
-
-.header__title {
-  grid-column: 1 / 3;
-  justify-self: start;
-  color: var(--header1-color);
-  text-shadow: 4px 4px 0 var(--accent-color);
+.page-title {
+  color: var(--brand-color, #db00ff);
+  font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: var(--small-line-height);
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
 }
 
-.header__text {
-  grid-column: 1 / 3;
-  justify-content: end;
-  display: inline-block;
+.title {
+  color: var(--secondary-color, #ff0070);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: inherit;
 }
 
-/* MAIN STYLES */
-
-.main {
-  margin-block: 40px;
-  padding-inline: 10px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: column;
-  row-gap: 50px;
+.title-decor {
+  color: var(--highlight-color, #000028);
+  background: var(--accent-color, #ff0070);
 }
 
-.topic {
-  grid-column: 1 / 4;
-  grid-template-columns: 1fr 1fr 1fr;
+.section {
   display: grid;
   gap: 20px;
 }
 
-.topic__title {
-  grid-column: 1 / 4;
-  color: var(--header2-color);
-  font-size: var(--regular-font-size);
-  font-weight: var(--bold-font-weight);
-  line-height: var(--large-line-height);
-}
-
-.topic__card {
-  grid-column: 1 / 4;
-  display: grid;
-  grid-template-rows: min-content auto;
-  grid-auto-flow: row;
-  row-gap: 10px;
-}
-
-.title_decor {
-  grid-column: 1 / 4;
-  color: var(--header3-color);
-  background-color: var(--accent-color);
-  font-size: var(--regular-font-size);
-  font-weight: var(--bold-font-weight);
-  line-height: var(--large-line-height);
-}
-
-.card__text {
-  grid-column: 1 / 4;
-  color: var(--text-color);
-  font-size: var(--regular-font-size);
-  line-height: var(--large-line-height);
-}
-
-.topic-pictures {
-  grid-column: 1 / 4;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: column;
+.section-gallery {
   gap: 10px;
 }
 
-.topic__image {
-  grid-column: 1 / 4;
-  width: 100%;
-  height: 100%;
+.section-how__title {
+  margin-block-end: 20px;
 }
 
-
-.thin-title {
-  font-weight: var(--regular-font-weight);
-}
-
-/* FOOTER STYLES */
-
-
- footer {
-  padding: 10px;
-  min-height: 100vh;  /* Better than height for flexibility */
+.articles-list {
   display: grid;
-  box-sizing: border-box;
+  gap: 20px;
 }
 
-
-.footer__title {
-  justify-self: center;
-  align-self: center;
-  color: var(--header1-color);
-  text-shadow: 2px 2px 0 var(--accent-color);
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: var(--title-line-height);
+.article {
+  display: grid;
+  gap: 10px;
 }
 
-@media (width >= 768px){
-  .header {
-    padding: 20px;
+.gallery-list {
+  display: grid;
+  gap: 10px;
+}
+
+.gallery-list__item-img {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+/* #endregion Конец глобальных компонентов */
+
+/* #region Начало блока header */
+
+.header {
+  align-items: start;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin-block: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 2px 12px;
+  color: var(--secondary-color, #ff0070);
+  line-height: 18px;
+  text-transform: lowercase;
+  background: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button_active {
+  border-color: currentColor;
+  cursor: default;
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  border-color: var(--secondary-color-o-40, #ff007040);
+}
+
+.header__theme-menu-button:focus {
+  outline: 0;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end-color: currentColor;
+}
+
+.header__title {
+  margin-block: 55px;
+  color: var(--highlight-color, #000028);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: inherit;
+  background: var(--accent-color, #ff0070);
+}
+
+/* #endregion Конец блока header */
+
+/* #region Начало блока main */
+
+.main {
+  display: grid;
+  gap: 50px;
+  padding: 40px 10px;
+}
+
+/* #endregion Конец блока main */
+
+/* #region Начало блока footer */
+
+.footer {
+  place-items: center;
+}
+
+/* #endregion Конец блока footer */
+
+@media (width >= 768px) {
+  .rec-decor {
+    inset-inline-end: 28px;
+    inset-block-start: 20px;
   }
 
-  .header__title {
-    position: relative;
-    margin-inline-start: -20px;
+  .page-title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .header__text {
-    grid-column: 2 / 3;
+  .section {
+    grid-template-columns: clamp(236px, calc(100% / 3.25), 315px) 1fr;
   }
 
-  .main {
-    margin-block: 60px;
-    padding-inline: 20px;
-    row-gap: 80px;
+  .section-what__articles-list {
+    grid-column-start: span 2;
   }
 
-  .topic {
-    grid-template-columns: 1fr 2fr;
-  }
-
-  .topic__title {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-  }
-
-  .topic__card {
-    grid-column: 2 / 3;
-  }
-
-  .topic:nth-child(2) .topic__card{
-    grid-column: 1 / 4;
-  }
-
-  .topic > .title_decor{
-    grid-column: 2 / 3;
-  }
-
-  .topic-pictures {
+  .section-gallery {
+    grid-template-columns: 1fr;
     gap: 20px;
   }
 
-  .topic__image {
-    object-fit: cover;
-    object-position: center;
+  .section-how__articles-list {
+    grid-column-start: 2;
   }
 
-  .topic__image:nth-child(2) {
-    grid-column: 1 / 3;
+  .gallery-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 
-  .topic__image:nth-child(3) {
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
+  .gallery-list__item:first-child,
+  .gallery-list__item:last-child {
+    grid-column-start: span 2;
   }
 
-  .topic__image:nth-child(4) {
-    grid-column: 1 / 2;
-    grid-row: 3 / 5;
+  .gallery-list__item:nth-child(2),
+  .gallery-list__item:nth-child(3) {
+    grid-row-start: span 2;
   }
 
-  .topic__image:nth-child(5) {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
+  .header {
+    padding-inline-start: 0;
   }
 
-  .topic__image:nth-child(6) {
-    grid-column: 2 / 4;
-    grid-row: 4 / 5;
+  .header__theme-menu {
+    margin-block-start: 170px;
+    margin-block-end: 70px;
   }
 
-  .footer {
-    padding: 20px;
+  .header__title {
+    justify-self: end;
+    inline-size: clamp(364px, calc(100% / 2 - 10px), 491px);
+  }
+
+  .main {
+    gap: 80px;
+    padding: 60px 20px;
   }
 }
 
 @media (width >= 1024px) {
-  .text-link:hover {
-    border-bottom: 1px solid var(--text-color);
+  .page-title {
+    text-shadow: 4px 4px 0 var(--color-purple-2, #ff0070);
   }
 
-  .text-link:focus {
-    outline: none;
+  .section {
+    column-gap: 30px;
   }
 
-  .text-link:focus-visible {
-    outline: 1px solid var(--text-color);
-    outline-offset: -1px;
+  .section-what__articles-list {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .header__theme-menu {
-    align-self: start;
     justify-self: center;
+    margin-inline-start: 20px;
+    margin-block-start: 0;
+    margin-block-end: 215px;
   }
 
   .header__theme-menu-list {
-    grid-auto-flow: column;
-  }
-
-  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
-    border: 1px solid var(--accent-color-opacity);
-  }
-
-  .header__theme-menu-button:focus {
-    outline: none;
-  }
-
-  .header__theme-menu-button:focus-visible {
-    border: none;
-    outline: none;
-    border-bottom: 1px solid var(--decoration-color);
-  }
-
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-  .topic {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-
-  .topic__card {
-    grid-column: 2 / 4;
-  }
-
-  .topic:nth-child(2) {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-
-  }
-
-  .topic:nth-child(2) .topic__title {
-    grid-row: span 1;
-  }
-
-  .topic:nth-child(2) .topic__card{
-    grid-row: 2 / 3 ;
-    grid-column: span 1;
-  }
-
-  .topic > .title_decor{
-    grid-column: 2 / 4;
-  }
-
-  .footer__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    flex-direction: row;
   }
 }
